[package]
name = "volo-concurrency-limiter"
version = "0.1.0"
edition = "2021"
authors = ["Volo Contributors <volo@cloudwego.io>"]
repository = "https://github.com/volo-rs/concurrency-limiter"
documentation = "https://docs.rs/volo-concurrency-limiter"
description = "A concurrency limiter for Volo."
license = "MIT OR Apache-2.0"

[features]
# Currently there are nothing to do with the "volo-thrift" feature.
# We still advise users to use the feature flag, to reduce the possibility of breaking changes in future upgrades.
volo-grpc = ["dep:volo-grpc"]
volo-thrift = ["dep:volo-thrift"]

[dependencies]
volo = "0.8"
volo-grpc = { version = "0.8", optional = true }
volo-thrift = { version = "0.8", optional = true }
